Updated css and jqtouch to allow mix and match of fixed (iscroll) and unfixed page. Unfixed form. Added some input-guard css, but it might never work well enough. I went as far as pre-scroll the form before focus on input, but mobile safari just like to jump and misplace the caret, and focus on the wrong input. I tried to create a fake mouse event to compensate the pre-scrolled position, but it still didn't fix the focus.

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -25,7 +25,10 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    overflow: hidden;
+}
+
+#jqt.keyboardpad {
+    bottom: 260px;
 }
 
 #jqt .selectable, #jqt input, #jqt textarea {
